<resources>
    <string name="app_name">Задачи</string>
    <string name="clear_all">Очистить все</string>
    <string name="sort">Сортировать по дате</string>
    <string name="highlight">Выделить цветом по приоритету</string>
    <string name="exit">Сохранить и выйти</string>
    <string name="task_name">Название задачи</string>
    <string name="description">Описание</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="priority">Приоритет</string>
    <string name="low">Низкий</string>
    <string name="normal">Нормальный</string>
    <string name="high">Высокий</string>
    <string name="save">Сохранить</string>
    <string name="setDate">Установить дату...</string>
    <string name="setTime">Установить время...</string>
    <string-array name="priorities">
        <item>Нормальный</item>
        <item>Высокий</item>
        <item>Низкий</item>
    </string-array>
</resources>