<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/clear_all"
        android:orderInCategory="1"
        app:showAsAction="withText"
        android:title="@string/clear_all" />
    <item
        android:id="@+id/sort"
        android:orderInCategory="2"
        app:showAsAction="withText"
        android:title="@string/sort" />
    <item
        android:id="@+id/highlight"
        android:orderInCategory="3"
        app:showAsAction="withText"
        android:title="@string/highlight" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="4"
        app:showAsAction="withText"
        android:title="@string/exit" />
</menu>