<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/taskNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_name"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />

    <EditText
        android:id="@+id/taskNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/taskNameTextView" />

    <EditText
        android:id="@+id/descriptionEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:textSize="20sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/descriptionTextView" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/taskNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/taskNameEditText"
        android:layout_marginTop="8dp" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/descriptionEditText"
        app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/timeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/dateTextView"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        android:layout_marginTop="32dp"/>

    <Button
        android:id="@+id/setDateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:text="@string/setDate"
        app:layout_constraintStart_toEndOf="@+id/dateTextView"
        app:layout_constraintTop_toTopOf="@+id/dateTextView"
        android:onClick="setDate"/>

    <Button
        android:id="@+id/setTimeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setTime"
        app:layout_constraintStart_toStartOf="@+id/setDateButton"
        app:layout_constraintTop_toTopOf="@+id/timeTextView"
        android:onClick="setTime"/>

    <TextView
        android:id="@+id/priorityTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/priority"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/timeTextView"
        app:layout_constraintTop_toBottomOf="@+id/timeTextView"
        android:layout_marginTop="40dp"/>

    <Spinner
        android:id="@+id/prioritySpinner"
        android:layout_width="171dp"
        android:layout_height="43dp"
        android:ems="10"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toEndOf="@+id/priorityTextView"
        app:layout_constraintTop_toTopOf="@+id/priorityTextView"
        android:entries="@array/priorities"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="48dp"
        android:onClick="saveNewTask"/>

</androidx.constraintlayout.widget.ConstraintLayout>